--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <div class="container text-center bg-body-tertiary">
+    <div class="container text-center bg-body-tertiary pb-5 mb-5 min-vh-100">
       <h1>Surya</h1>
       <nav class="navbar navbar-expand-lg">
         <ul class="navbar-nav mx-auto gap-3 w-75">
@@ -24,5 +24,11 @@
       </nav>
       <%= yield %>
     </div>
+    <footer class="p-4 text-center bg-secondary text-white fixed-bottom">
+      <div>
+        Copyright © 2023
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
